--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,700italic,400italic);
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic,700,700italic);
+
+
+
+body{
+font-family:'Fira Sans',Tahoma,Arial,sans-serif;
+}
+
+.telas-template button{
+padding: 1.25rem 2.5rem;
+background-color: #FF8000;
+font-size: 1.125rem;
+border: none;
+color: white;
+}
+.telas-template{
+margin: 0px;
+width: 990px;
+height: 470px;
+padding: 10px;
+color: white;
+}
+
+#capa-de-curso{
+background-image: url("../imgs/fundo1.png");
+}
+
+.telas-template h1{
+	margin-top: 120px;
+}
+
+.telas-template .centralizado{
+text-align: center;
+vertical-align: center;
+}	
+
+
 #menu-telas p{
 margin: 0px;
 font-size: 12px;
@@ -247,7 +285,6 @@ border-style: solid;
 border-width: thin;
 text-align: center;
 vertical-align: middle;
-line-height: 60px;
 }
 
 .stb-telas p{
@@ -270,4 +307,8 @@ background-color: #a6a6a6;
 
 #todas-as-telas{
 	display: none;
+}
+
+.highlight{
+	background-color: yellow;
 }
