--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,14 @@ font-family: 'Fira Sans',Tahoma,Arial,sans-serif;
 font-size: 14px;
 }
 
+#builder-container{
+	width: 100%;
+	height: 100%;
+	border: 0px;
+	margin: 0px; 
+	text-align: center;
+}
+
 .stb-telas h1{
 font-family: 'Fira Sans',Tahoma,Arial,sans-serif;
 font-size: 20px;
@@ -189,4 +197,44 @@ display:none;
 
 #home-container a:visited{
 	color: "#fff" !important;
+}
+
+.modelos-de-tela{
+	background-color: gray;
+	width: 70px;
+	height: 70px;
+	margin: 10px;
+	float: left;
+	display: inline;
+	cursor: pointer;
+}
+
+.drops{
+	background-color: #bdc3c7;
+	width: 70px;
+	height: 70px;
+	margin: 10px;
+	float: left;
+	display: inline;
+	
+}
+
+#esqueleto-stb{
+float: none;
+clear: both;
+background-color: #fff;
+min-height: 270px;
+margin-top: 150px;
+}
+
+#controles{
+float: none;
+clear: both;
+bottom: 0px;
+margin-top: 50px;
+}
+
+#modelos-disponíveis{
+float: none;
+clear: both;
 }
