--- a/css/style.css
+++ b/css/style.css
@@ -201,18 +201,19 @@ display:none;
 
 .modelos-de-tela{
 	background-color: gray;
-	width: 70px;
-	height: 70px;
+	width: 100px;
+	height: 51px;
 	margin: 10px;
 	float: left;
 	display: inline;
 	cursor: pointer;
 }
 
+
 .drops{
 	background-color: #bdc3c7;
-	width: 70px;
-	height: 70px;
+	width: 100px;
+	height: 51px;
 	margin: 10px;
 	float: left;
 	display: inline;
@@ -237,4 +238,11 @@ margin-top: 50px;
 #modelos-disponíveis{
 float: none;
 clear: both;
+}
+
+.dialogs-basic{
+	display: none;
+	background-color: #fff;
+	opacity: 0.9;
+	color: #000;
 }
