--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ font-size: 16px;
 
 .telas{
 	
-	margin: 5px;
 	width:  990px;
 	height: 470px;
 	padding: 5px;
@@ -78,17 +77,17 @@ font-size: 14px;
 
 #capa-de-curso h1{
 	margin-top: 120px;
+	text-shadow: 0 4px 6px rgba(0,0,0,.3);
+}
+
+#capa-de-curso p{
+	text-shadow: 0 4px 6px rgba(0,0,0,.3);
 }
 
 .centralizado{
 	text-align: center;
 	vertical-align: center;
 }	
-
-#btnHome{
-    margin-left: 410px;
-    margin-top: -200px;
-}
 
 
 #orientacoes{
@@ -117,7 +116,16 @@ z-index: 9999!important;
 
 
 
+.btn-alinhamento {
+    text-align: center;
+}
 
+.btn-alinhamento .button {
+  top: -30px;
+    position: relative;
+    border: none;
+    box-shadow: none;
+}
 
 
 
@@ -167,7 +175,6 @@ display:none;
 }
 
 .modelos-de-tela{
-	background-color: gray;
 	width: 100px;
 	height: 51px;
 	margin: 10px;
@@ -208,16 +215,33 @@ clear: both;
 }
 
 .dialogs-basic{
-	display: none;
-	background-color: #fff;
-	opacity: 0.9;
-	color: #000;
+display: none;
+background-color: #fff;
+opacity: 0.9;
+color: #000;
 }
 
 .conteudo-telas{
-	display: none;
+display: none;
 }
 
 #stb-final{
-	/*display: none !important;*/
+display: none !important;
+}
+
+.layout-container button{
+padding: 1.25rem 2.5rem;
+background-color: #FF8000;
+font-size: 1.125rem;
+}
+
+.label-telas{
+	line-height: 14px; 
+    font-size: 10px;
+    float: none;
+    top: -15px;
+    z-index: 9999;
+    margin: 0px;
+    padding: 0px;
+    white-space: nowrap;
 }
